[TEST+REFACTO] positive integer + int parser : green state